--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #000000;
 }
 
 div {
@@ -17,3 +16,5 @@ div {
     z-index: 100;
 }
 
+.section {
+}
