--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -1,12 +1,12 @@
 .about-section {
   width: 100vw;
-  height: 70vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-color: black;
+  background: transparent;
 }
 
 
@@ -18,6 +18,8 @@
 .wrapper {
   overflow-x: hidden;
   position: relative;
+  margin: 0;
+  background: transparent;
 }
 
 .bg {
@@ -36,16 +38,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 400vw;
+  width: 200vw;
   height: 100vh;
-  margin: 0;
+  margin: 0 0 0 400px;
 }
 
 .feature-card {
   display: flex;
   justify-content: center;
   align-items: center;
-  ;
   width: 100vw;
   background-color: transparent;
 
@@ -53,10 +54,11 @@
 
 .card {
   display: flex;
-  width: 60%;
+  width: 90%;
   padding: 0;
   border-radius: 10px;
-  background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+  /*background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));*/
+  background-color: rgb(175, 175, 175);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border-radius: 10px;
@@ -81,10 +83,12 @@
 }
 
 .text-wrapper h3 {
+  color: black;
   font-size: 30px;
 }
 
 .text-wrapper p {
+  color: rgb(22, 22, 22);
   font-size: 17px;
 }
 
@@ -104,12 +108,26 @@
 }
 
 
+@media (max-width: 1400px) { /* for gsap animation */
+  .wrapper {
+    display: flex;
+    height: fit-content;
+    overflow: hidden;
+  }
+
+  .features {
+    flex-direction: column;
+    width: 100vw;
+    height: fit-content;
+    margin: 0;
+  }
+  .card {
+    margin: 50px 0;
+  }
+}
 
 /* Tablet */
 @media (max-width: 1024px) {
-  .about-section h2 {
-    font-size: 2.2rem;
-  }
 
   .text-wrapper {
     padding: 1rem 2rem;
@@ -130,9 +148,6 @@
 
 /* Small tablet / large phone */
 @media (max-width: 768px) {
-  .about-section h2 {
-    font-size: 2rem;
-  }
 
   .card {
     flex-direction: column;
