--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,7 +1,6 @@
 body {
-    margin: 0;
-    padding: 0;
-    background-color: #000000;
+  margin: 0;
+  padding: 0;
 }
 
 .home-container {
@@ -23,7 +22,9 @@ body {
   width: 100vw;
   height: 100vh;
   z-index: -99;
+
 }
+
 
 
 @keyframes animate {
@@ -68,14 +69,25 @@ body {
 #top-hometext {
   font-size: clamp(3.125rem, 1.1529rem + 7.4142vw, 11.25rem);
   font-family: "Audiowide", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  color: #d1d0cd;
-  opacity: 1;
-  margin: 0;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(199, 199, 199, 1) 23%, rgba(150, 150, 150, 1) 50%, rgba(199, 199, 199, 1) 79%, rgba(255, 255, 255, 1) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  background-size: 200%;
+  animation: home-text 2s linear infinite;
   line-height: 1;
-  z-index: -2;
+  margin: 0;
+  z-index: 1;
+  position: relative;
 }
+
+@keyframes home-text {
+  to {
+    background-position: 200%;
+  }
+  
+}
+
 
 
 .home-des {
@@ -89,10 +101,6 @@ body {
 
 
 
-@media (max-width: 768px) {
-  
-}
+@media (max-width: 768px) {}
 
-@media (max-width: 480px) {
-  
-}
+@media (max-width: 480px) {}
