--- a/src/Components/Team/Team.module.css
+++ b/src/Components/Team/Team.module.css
@@ -1,13 +1,14 @@
 /* Team Section */
 .team-section {
   width: 100%;
-  height: 100vh;
+  height: fit-content;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-color: transparent;
+  background-color: #000000;
 }
 
 .wrapper-team {
@@ -16,7 +17,8 @@
   align-items: center;
   justify-content: center;
   width: 90%;
-  margin: 50px 0 50px 0;
+  height: fit-content;
+  margin: 0 0 20px 0;
 }
 
 .team-section h2 {
@@ -38,39 +40,47 @@
 
 /* Cards */
 .card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background: #0a0a0a;
-  padding: 0px 0 20px 0;
-  border-radius: 10px;
-  width: 100%;
-  /* let grid control width */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
-  /* optional max width */
-  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-  color: #bfbfc5;
-  margin: 0 auto;
+  margin: auto;
+  text-align: center;
+  background-color: aliceblue;
 }
 
-.card:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 15px rgba(255, 255, 255, 0.1);
-}
-
-/* Card content */
 .card img {
   width: 100%;
-  height: auto;
-  max-height: 300px;
-  object-fit: cover;
-  margin-bottom: 10px;
 }
 
-.card h3 {
-  margin-bottom: 6px;
-  font-size: 1.1rem;
-  color: #fff;
+.card h1 {
+  color: #292828;
+}
+
+.card p {
+  color: #292929;
+}
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+  font-size: 22px;
+  color: black;
+}
+
+button:hover,
+a:hover {
+  opacity: 0.7;
 }
 
 /* Tablet */
@@ -81,6 +91,10 @@
     gap: 25px;
     max-width: 1000px;
   }
+
+  .wrapper-team {
+    margin: 100px 0;
+  }
 }
 
 @media (max-width: 1024px) {
@@ -89,7 +103,7 @@
   }
 
   .team {
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
     width: 80%;
 
   }
@@ -114,9 +128,7 @@
     font-size: 1.6rem;
   }
 
-  .wrapper-team {
-    margin-top: 100px;
-  }
+
 
   .team {
     grid-template-columns: repeat(2, 1fr);
@@ -144,10 +156,7 @@
     gap: 1rem;
   }
 
-  .wrapper-team {
-    margin: 70px 0 20px 0;
-  
-  }
+
 
   .card {
     width: 150px;
@@ -159,8 +168,8 @@
     max-height: 140px;
   }
 
-  .card h3 {
-    font-size: 0.95rem;
+  .card h1 {
+    font-size: 2rem;
   }
 
   .team-section {
@@ -173,7 +182,5 @@
     gap: 1rem;
   }
 
-  .wrapper-team {
-    margin: 70px 0 20px 0;
-  }
+
 }
