--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -2,7 +2,6 @@
   width: 100vw;
   height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -11,9 +10,10 @@
 
 
 .about-section h1 {
-  font-size: clamp(2.5rem, 1.8932rem + 2.589vw, 5rem);
+  font-size: clamp(1.5625rem, 1.085rem + 2.2208vw, 3.75rem);
   margin: 0 20px;
-}
+  word-wrap: break-word;
+} 
 
 .wrapper {
   overflow-x: hidden;
@@ -167,9 +167,6 @@
     padding: 1.5rem 0.8rem;
   }
 
-  .about-section h2 {
-    font-size: 1.6rem;
-  }
   
   .text-wrapper {
     padding: 1rem 2rem;
