--- a/src/Components/Team/Team.module.css
+++ b/src/Components/Team/Team.module.css
@@ -2,13 +2,13 @@
 .team-section {
   width: 100%;
   height: fit-content;
-
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
   background-color: #000000;
+  overflow: hidden;
 }
 
 .wrapper-team {
