--- a/src/Components/Contact/Contact.module.css
+++ b/src/Components/Contact/Contact.module.css
@@ -1,13 +1,15 @@
-section {
+.contact-section {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     overflow-x: hidden;
+    /*background-image: linear-gradient(to right bottom, #000000, #060506, #0c0a0c, #100f11, #131315, #131416, #141518, #141619, #131518, #121418, #101217, #0f1116);*/
 }
 
 .bg {
+  display: none;
     position: absolute;
     height: 100vh;
     width: auto;
@@ -18,6 +20,7 @@ section {
 
 .contactContainer {
   background-color: #1f1f1f46;
+  
   color: #f5f5f5;
   padding: 40px;
   width: 80%;
