--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-color: #0f0e0e00;
+  background: linear-gradient(to top, black, transparent 80%);  
 }
 
 .about-section h1 {
@@ -20,6 +20,7 @@
   overflow-x: hidden;
   position: relative;
   margin: 0;
+  width: 100%;
   background: rgb(0, 0, 0);
 }
 
