--- a/src/Components/MockUps/Mockup.module.css
+++ b/src/Components/MockUps/Mockup.module.css
@@ -1,30 +1,43 @@
 .section-mockup {
-    height: 100vh;
-    z-index: -99;
+    height: 100%;
+    
+    z-index: 1;
+    background-color: rgb(0, 0, 0);
 }
 
 .wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100%;
+    background-size: cover;
+    background-position: center;
 }
 
 .mockup {
-    position: relative;
-    width: 100vw;
+    aspect-ratio: 16 / 9;
+    width: 100%;
     height: auto;
     object-fit: cover;
-    z-index: -1;
+    object-position: center;
     filter: grayscale(50%);
-    background: linear-gradient(to top, black, transparent 80%);
-    mask-image: linear-gradient(to top, black, transparent 80%);
 
+    mask-image: linear-gradient(to top, black, transparent 80%);
+    -webkit-mask-image: linear-gradient(to top, black, transparent 80%);
+
+    z-index: 1;
 }
+
+
 
 .mockupMask {
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: auto;
     object-fit: cover;
-    z-index: 2;
+    object-position: center;
+    aspect-ratio: 16 / 9;
+    z-index: 3;
 }
 
 .text-wrapper {
@@ -34,9 +47,35 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 2;
 }
 
-.wrapper h1{
-    font-size: 250px;
-    color: rgb(255, 255, 255);
+.wrapper h1 {
+    font-size: clamp(2.5rem, 0.0444rem + 11.4213vw, 13.75rem);
+    color: white;
+}
+
+
+@media (max-width: 1024px) {
+    .wrapper h1 {}
+
+    .mockupMask {
+        width: 130vw;
+    }
+
+    .mockup {
+        width: 130vw;
+    }
+}
+
+@media (max-width: 724px) {
+    .wrapper h1 {}
+
+    .mockupMask {
+        width: 180vw;
+    }
+
+    .mockup {
+        width: 180vw;
+    }
 }
